--- a/index.html
+++ b/index.html
@@ -29,34 +29,11 @@ Licence URI: https://www.os-templates.com/template-terms
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.backtotop.js" defer></script>
     <script src="./js/slideshow.js" defer></script>
-    <script>
-		/* Carrega o cabeçalho e rodapé da página */
-        function showSite() {
-			if (!document.getElementById("loading-screen")) return;
-			
-			if (document.querySelector("#header-content *") && document.querySelector("#footer-content *")) {		
-				document.getElementById("loading-screen").remove();
-				window.scroll(0,0);
-			}
-		}        
-        $(document).ready(function() {
-            $("#header-content").load("./_includes/header.html", showSite);
-            $("#footer-content").load("./_includes/footer.html", showSite);
-        });
-    </script>    
 </head>
 
 <body id="top">
 
-<div id="loading-screen">
-	<span>
-		<img src="./images/protut.png">
-		<i class="fa fa-circle-o-notch fa-spin fa-3x"></i>
-	</span>
-</div>
-
-<!-- Cabeçalho das páginas (inserido via Javascript) -->
-<div id="header-content"></div>
+<% include "header.html" %>
 
 <!-- Seção de apresentação -->
 <div class="wrapper bgded">
@@ -185,8 +162,7 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 
 
-<!-- Rodapé das páginas (inserido via Javascript) -->
-<div id="footer-content"></div>
+<% include "footer.html" %>
 
 <!-- Botão p/ voltar ao topo da página -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
