--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <body id="top">
 
-<% include "header.html" %>
+<% include header.html %>
 
 <!-- Seção de apresentação -->
 <div class="wrapper bgded">
@@ -162,7 +162,7 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 
 
-<% include "footer.html" %>
+<% include footer.html %>
 
 <!-- Botão p/ voltar ao topo da página -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
