Melhorando as páginas...

--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Processo Seletivo - Protut Soluções em Energia</title>
+    <title>Contato - Protut Soluções em Energia</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -68,19 +68,26 @@ Licence URI: https://www.os-templates.com/template-terms
   <section id="breadcrumb" class="hoc clear"> 
 	<ul>
 	  <li><a href="./index.html">Página Inicial</a></li>
-	  <li><a href="./processo-seletivo.html">Processo Seletivo</a></li>		  
+	  <li><a href="./contato.html">Contato</a></li>		  
 	</ul>
-	<h4>Processo Seletivo</h4>
+	<h4>Contato</h4>
   </section>
 </div>
 
 <div class="wrapper row3">
   <main class="hoc container clear">     
     <div class="content justify"> 
-      <h3>Nosso Processo Seletivo</h3>     
-      <p>Quer fazer parte da equipe Protut? Entre no nosso processo seletivo, oras!</p>
-      <p>Me sigam para mais dicas empreendedorísticas.</p>
-	  <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
+      <h3>Fale com a Protut</h3>       
+      <p><q>Deixa, deixa, deixa eu dizer o que penso desta vida, preciso demais desabafar.</q></p>
+      <p>Se você precisa desabafar sobre seus problemas em Eletricidade e Automação, mande-nos uma mensagem!</p>
+	  
+	  <br>
+	  
+	  <h3>Outros dados de contato</h3>
+	  <p>E-mail: pro@tut.com.br</p>
+	  <p>Instagram: @protutjr</p>
+	  <p>WhatsApp: bloqueado (senha: "oi sumido(a), vamo fechar um projetinho?")</p>
+	  
     </div>
     <div class="clear"></div>
   </main>
