--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Processo Seletivo - Protut Soluções em Energia</title>
+    <title>Perguntas Frequentes - Protut Soluções em Energia</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -77,10 +77,11 @@ Licence URI: https://www.os-templates.com/template-terms
 <div class="wrapper row3">
   <main class="hoc container clear">     
     <div class="content justify"> 
-      <h3>Nosso Processo Seletivo</h3>     
-      <p>Quer fazer parte da equipe Protut? Entre no nosso processo seletivo, oras!</p>
-      <p>Me sigam para mais dicas empreendedorísticas.</p>
-	  <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
+      
+      <h3>Perguntas Frequentes</h3>     
+      <p>Encontre a resposta para dúvidas comuns sobre a Protut.</p>
+      <div class="center" style="width: 100%; height: 900px; background-color: #FF8B2F; color: white;"><b>CONTEÚDO A SER INSERIDO</b></div>
+      
     </div>
     <div class="clear"></div>
   </main>
