--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -78,13 +78,30 @@ Licence URI: https://www.os-templates.com/template-terms
   <main class="hoc container clear">     
     <div class="content justify"> 
       <h3>Nosso Processo Seletivo</h3>           
-	    <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-      <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-      <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-      <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+	  <p>Basicamente consiste em agradar os protuteiros veteranos comprando-lhes comida e doces.</p>
+	  <br>
+	  
+	  <h3>Nossos Setores</h3>
+	  <p>São estes os setores nos quais você poderá atuar dentro da Protut.</p>
+	  
+	  <h5>Presidência <i class="fa fa-star"></i></h5>	  
+	  <p>Responsável por coordenar os demais setores, etc. , etc. e representar legalmente a Protut.</p>
+	  
+	  <h5>Setor Administrativo/Financeiro <i class="fa fa-usd"></i></h5>
+	  <p>Este cargo tem como missão principal responder pela apresentação de relatórios contábeis, financeiros e gerenciais, elaboração de planos orçamentários, planejamento e administração dos recursos humanos, otimização da rentabilidade e adoção de tecnologias adequadas para manutenção de um ambiente atualizado e integrado.</p>
+	  
+	  <h5>Setor Comercial <i class="fa fa-handshake-o"></i></h5>
+	  <p>É a área direta entre o produto/serviço e o cliente, gerenciamos possíveis clientes e parcerias, fazemos também apresentação do produto/serviço e diagnosticamos perfis saudáveis para a empresa. Requisitos: Gostar de trabalhar com pessoas, interesse em desenvolvimento pessoal e social, não ter problemas em falar com o público, organizado.</p>
+	  
+	  <h5>Setor de Marketing <i class="fa fa-paint-brush"></i></h5>
+	  <p>O setor de marketing é responsável pelo rosto da empresa, como as pessoas vêem a empresa, para entrar no nosso setor a pessoa precisa ter vontade de aprender, proatividade, e um pouquinho de criatividade.</p>
+	  
+	  <h5>Setor de Talentos Humanos <i class="fa fa-comments"></i></h5>
+	  <p>É responsável pela gestão dos membros da empresa, como por exemplo satisfação e desempenho, além de organizar processos internos e externos à empresa (preparação de reuniões, processo seletivo, eleições internas, mudanças de setor etc). Para fazer parte é necessário ter boa organização, comunicação, criatividade e vontade de buscar mudanças.</p>
+	  
+	  <h5>Setor de Projetos <i class="fa fa-cogs"></i></h5>
+	  <p>É o setor que atua diretamente na elaboração/construção dos projetos, pesquisando e analisando as melhores soluções possíveis para o cliente. Requisitos: Trabalhar em grupo, responsável, não é necessário ter conhecimento prévio, mas se tiver será um diferencial.</p>
+    
     </div>
     <div class="clear"></div>
   </main>
