Escrita a página de Processo Seletivo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
     <!-- FONTES -->
+    <link rel="icon" href="./corujut.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Overpass:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
 
@@ -132,7 +133,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <div class="one_half first">
         <h3 class="center">Nossa história</h3>
         <p class="justify">Fundada em 2013 por alunos da UTFPR de Ponta Grossa, a missão da Protut é desenvolver, capacitar, produzir e comercializar serviços, tecnologias e produtos diferenciados de alta qualidade, fazendo parcerias de confiança e respeito mútuo nas áreas acadêmicas e profissionais.</p>
-        <p class="justify">A partir de 201?, com o curso de Engenharia Eletrônica sendo transformado em Engenharia Elétrica, e com a abertura da nossa empresa também aos alunos do curso de Tecnologia em Automação Industrial, mudamos nosso nome de Protut Eletrônica para <b>Protut Soluções em Energia</b>. Uma nova identidade, mas o mesmo compromisso e dedicação aos nossos clientes.</p>
+        <p class="justify">A partir de 2018, com o curso de Engenharia Eletrônica sendo transformado em Engenharia Elétrica, e com a abertura da nossa empresa também aos alunos do curso de Tecnologia em Automação Industrial, mudamos nosso nome de Protut Eletrônica para <b>Protut Soluções em Energia</b>. Uma nova identidade, mas o mesmo compromisso e dedicação aos nossos clientes.</p>
         <footer class="center"><a href="#">Saiba mais &raquo;</a></footer>
       </div>
       
