Começando a criar o sistema de dropdown

--- a/faq.html
+++ b/faq.html
@@ -49,11 +49,18 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <div class="wrapper row3">
   <main class="hoc container clear">     
-    <div class="content justify"> 
+    <div class="content jusp"> 
       
       <h3>Perguntas Frequentes</h3>     
       <p>Encontre a resposta para dúvidas comuns sobre a Protut.</p>
-      <div class="center" style="width: 100%; height: 900px; background-color: #FF8B2F; color: white;"><b>CONTEÚDO A SER INSERIDO</b></div>
+      <div>
+        <div class="dropdown" onclick="this.classList.add('dropdown-visible');">
+          <header>Como contratar a Protut?</header>
+          <div>
+            <p>Simples, enter em contato!</p>
+          </div>
+        </div>
+      </div>
       
     </div>
     <div class="clear"></div>
