Criado formulário na página de Contato

--- a/contato.html
+++ b/contato.html
@@ -49,19 +49,32 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <div class="wrapper row3">
   <main class="hoc container clear">     
-    <div class="content justify"> 
-      <h3>Fale com a Protut</h3>       
-      <p><q>Deixa, deixa, deixa eu dizer o que penso desta vida, preciso demais desabafar.</q></p>
-      <p>Se você precisa desabafar sobre seus problemas em Eletricidade e Automação, mande-nos uma mensagem!</p>
-	  
-	  <br>
-	  
-	  <h3>Outros dados de contato</h3>
-	  <p>E-mail: pro@tut.com.br</p>
-	  <p>Instagram: @protutjr</p>
-	  <p>WhatsApp: bloqueado (senha: "oi sumido(a), vamo fechar um projetinho?")</p>
-	  
+    <div class="content three_quarter first"> 
+      <h3 class="center">Fale conosco</h3>      
+	  <p class="center">Envie-nos uma mensagem online. Responderemos o mais rápido possível.</p>
+	  <section id="contact-form">
+		  <script data-b24-form="inline/8/s2nasp" data-skip-moving="true">
+			(function(w,d,u){
+			var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);
+			var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+			})(window,document,'https://cdn.bitrix24.com.br/b20909251/crm/form/loader_8.js');
+		  </script>
+	  </section>	 	  
     </div>
+    
+    <div class="sidebar one_quarter jusp">
+		  <h5>Contato</h5>
+		  <h6><i class="fa fa-map-marker"></i> Nosso endereço:</h6>
+		  <p style="font-size: 14px;">
+			UTFPR campus Ponta Grossa - Bloco C, sala C-107.<br>
+            <b>Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa – PR</b><br>
+            <a href="https://goo.gl/maps/BqAhdFfbFUR6SrXe9" target="__blank">Ver no Google Maps &raquo;</a>
+          </p>
+          
+		  <h6><i class="fa fa-envelope-o"></i> Nosso e-mail:</h6>
+		  <p style="font-size: 14px;"><span>comercial.</span><span>protut@gmail.com</span></p>
+	</div>
+	
     <div class="clear"></div>
   </main>
 </div>
