Melhorias na página de Contato

--- a/contato.html
+++ b/contato.html
@@ -59,7 +59,10 @@ Licence URI: https://www.os-templates.com/template-terms
 			var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
 			})(window,document,'https://cdn.bitrix24.com.br/b20909251/crm/form/loader_8.js');
 		  </script>
-	  </section>	 	  
+		  <div id="contact-form-loading">
+			  <p><i class="fa fa-refresh fa-spin"></i> Aguarde um instante. Carregando formulário&hellip;</p>
+		  </div>
+	  </section>
     </div>
     
     <div class="sidebar one_quarter jusp">
