--- a/quem-somos.html
+++ b/quem-somos.html
@@ -48,7 +48,7 @@ Licence URI: https://www.os-templates.com/template-terms
   </section>
 </div>
 
-<div class="wrapper row3">
+<div class="wrapper row-white">
   <main class="hoc container clear">     
     <div class="content jusp"> 
       <h3>Nossa história</h3>
