--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -47,7 +47,7 @@ Licence URI: https://www.os-templates.com/template-terms
   </section>
 </div>
 
-<div class="wrapper row3">
+<div class="wrapper row-white">
   <main class="hoc container clear">     
     
 	<div class="content jusp"> 
