Melhorias na página de Contato

--- a/contato.html
+++ b/contato.html
@@ -52,7 +52,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="content three_quarter first"> 
       <h3 class="center">Fale conosco</h3>      
 	  <p class="center">Envie-nos uma mensagem online. Responderemos o mais rápido possível.</p>
-	  <section id="contact-form">
+	  <section id="contact-form" class="btmspace-30">
 		  <script data-b24-form="inline/8/s2nasp" data-skip-moving="true">
 			(function(w,d,u){
 			var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);
@@ -63,19 +63,25 @@ Licence URI: https://www.os-templates.com/template-terms
 			  <p><i class="fa fa-refresh fa-spin"></i> Aguarde um instante. Carregando formulário&hellip;</p>
 		  </div>
 	  </section>
+	  <p>Confira também a nossa página de <a href="./faq.html" style="display:inline;">Perguntas Frequentes</a>.</p>
     </div>
     
-    <div class="sidebar one_quarter jusp">
-		  <h5>Contato</h5>
-		  <h6><i class="fa fa-map-marker"></i> Nosso endereço:</h6>
-		  <p style="font-size: 14px;">
-			UTFPR campus Ponta Grossa - Bloco C, sala C-107.<br>
-            <b>Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa – PR</b><br>
-            <a href="https://goo.gl/maps/BqAhdFfbFUR6SrXe9" target="__blank">Ver no Google Maps &raquo;</a>
-          </p>
-          
+    <div id="contact-info" class="sidebar one_quarter jusp" style="">
+		  <h5>Dados de contato</h5>
+		  <h6><i class="fa fa-telegram"></i> Nosso Telegram:</h6>
+		  <a href="https://t.me/protutjr" target="__blank">@protutjr</a>
 		  <h6><i class="fa fa-envelope-o"></i> Nosso e-mail:</h6>
-		  <p style="font-size: 14px;"><span>comercial.</span><span>protut@gmail.com</span></p>
+		  <p><span>comercial.</span><span>protut@gmail.com</span></p>
+		  <h6><i class="fa fa-globe"></i> Nossas redes sociais:</h6>
+		  <a href="https://www.instagram.com/protutjr" target="_blank">Instagram</a>
+		  <a href="https://www.facebook.com/protutempresajunior" target="_blank">Facebook</a>
+		  <a href="https://www.linkedin.com/company/protut" target="_blank">LinkedIn</a>
+		  <h6><i class="fa fa-map-marker"></i> Nosso endereço:</h6>
+		  <address>
+			UTFPR campus Ponta Grossa - Bloco C, sala 107.<br>
+            Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa – PR
+            <a href="https://goo.gl/maps/BqAhdFfbFUR6SrXe9" target="__blank">Ver no Google Maps &raquo;</a>
+          </address>
 	</div>
 	
     <div class="clear"></div>
