--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,7 @@ Licence URI: https://www.os-templates.com/template-terms
   </section>
 </div>
 
-<div class="wrapper row3">
+<div class="wrapper row-white">
   <main class="hoc container clear">     
     <div class="content three_quarter first"> 
       <h3 class="center">Fale conosco</h3>      
@@ -66,7 +66,7 @@ Licence URI: https://www.os-templates.com/template-terms
 	  <p>Confira também a nossa página de <a href="./faq.html" style="display:inline;">Perguntas Frequentes</a>.</p>
     </div>
     
-    <div id="contact-info" class="sidebar one_quarter jusp" style="">
+    <div id="contact-info" class="sidebar one_quarter jusp">
 		  <h5>Dados de contato</h5>
 		  <h6><i class="fa fa-telegram"></i> Nosso Telegram:</h6>
 		  <a href="https://t.me/protutjr" target="__blank">@protutjr</a>
@@ -78,7 +78,7 @@ Licence URI: https://www.os-templates.com/template-terms
 		  <a href="https://www.linkedin.com/company/protut" target="_blank">LinkedIn</a>
 		  <h6><i class="fa fa-map-marker"></i> Nosso endereço:</h6>
 		  <address>
-			UTFPR campus Ponta Grossa - Bloco C, sala 107.<br>
+			UTFPR campus Ponta Grossa - Bloco C, sala C-012A.<br>
             Rua Washington Subtil Chueire, nº 330, 84017-220. Ponta Grossa – PR
             <a href="https://goo.gl/maps/BqAhdFfbFUR6SrXe9" target="__blank">Ver no Google Maps &raquo;</a>
           </address>
