Correções de bugs

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <div class="wrapper row-light-gray">
   <main class="hoc container">     
-    <div class="content center"> 
+    <div id="error404" class="center"> 
       <h3 style="margin: 0px;">Ops! A página não foi encontrada.</h3>
       <p style="margin: 0px;">Erro 404</p>
       <img src="./images/corujut.svg" style="width: 300px; padding: 40px;">
