--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -15,6 +15,8 @@ Licence URI: https://www.os-templates.com/template-terms
 <head>
     <!-- Título desta página -->
     <title>Processo Seletivo - Protut Soluções em Energia</title>
+    <link rel="icon" href="./favicon.png" type="image/png">
+	<link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
