Evoluindo o site através de melhora mentos

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <h5>Eficiência energética</h5>
           <p>Obtenha uma análise da eficiência energética do seu processo, melhore a sustentabilidade de seu negócio e economize dinheiro.</p>
           <footer>
-            <a href="#">Saiba mais &raquo;</a>
+            <a href="./servicos.html#eficiencia-energetica">Saiba mais &raquo;</a>
           </footer>
         </article>
       </li>          
@@ -84,7 +84,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <h5>Automação Industrial &amp; Residencial</h5>
           <p>Projetamos e implementamos sistemas de automação para sua empresa ou residência.</p>          
           <footer>
-            <a href="#">Saiba mais &raquo;</a>
+            <a href="./servicos.html#automacao-industrial">Saiba mais &raquo;</a>
           </footer>
         </article>
       </li>
@@ -93,7 +93,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <h5>SPDA</h5>
           <p>Elaboramos o projeto de Sistema de Proteção contra Descargas Atmosféricas (SPDA) para a sua instalação elétrica.</p>
           <footer>
-            <a href="#">Saiba mais &raquo;</a>
+            <a href="./servicos.html#spda">Saiba mais &raquo;</a>
           </footer>
         </article>
       </li>
@@ -116,14 +116,14 @@ Licence URI: https://www.os-templates.com/template-terms
         <h3 class="center">Nossa história</h3>
         <p>Fundada em 2013 por alunos da UTFPR de Ponta Grossa, a Protut busca desenvolver, produzir e comercializar serviços, tecnologias e produtos diferenciados de alta qualidade, para atender às mais diversas necessidades nas áreas de eletricidade e automação.</p>
         <p>A partir de 2018, com o curso de Engenharia Eletrônica sendo transformado em Engenharia Elétrica, e com a abertura da nossa empresa também aos alunos do curso de Tecnologia em Automação Industrial, mudamos nosso nome de Protut Eletrônica para <b>Protut Soluções em Energia</b>. Uma nova identidade, mas o mesmo compromisso e dedicação aos nossos clientes.</p>
-        <footer class="center"><a href="#">Saiba mais &raquo;</a></footer>
+        <footer class="center"><a href="./quem-somos.html">Saiba mais &raquo;</a></footer>
       </div>
       
       <div class="one_half jusp">
         <h3 class="center">O MEJ</h3>
         <p>O Movimento Empresa Júnior (MEJ) surgiu na França em 1967. A principal missão das empresas juniores (EJs) é aproximar os estudantes de cursos superiores da vivência prática da sua profissão, desenvolvendo o empreendedorismo e preparando para os futuros desafios do mercado de trabalho.</p>
         <p>A Protut está associada à Confederação Brasileira de Empresas Juniores - a Brasil Júnior. Também pertencemos, a nível estadual, à Federação Paranaense de Empresas Juniores (FEJEPAR), e, a nível regional, ao Núcleo Ponta Grossa de Empresas Juniores (NucPG).</p>
-        <footer class="center"><a href="#">Saiba mais &raquo;</a></footer>
+        <footer class="center"><a href="./mej.html">Saiba mais &raquo;</a></footer>
       </div>
 
     </div>
@@ -158,7 +158,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <div class="one_half first jusp">
         <h3>Fique por dentro das novidades</h3>
         <p>Quer saber mais sobre as últimas notícias e tudo o que está acontecendo na Protut? Acesse já o nosso blog. Lá, você fica sabendo de tudo que acontece na Protut: Processos seletivos, histórias de sucesso, depoimentos de ex-membros, dicas e muito mais.</p>
-        <footer><a href="#">Acessar blog &raquo;</a></footer>
+        <footer><a href="https://protutjr.blogspot.com">Acessar blog &raquo;</a></footer>
       </div>
       <div class="one_half">
         <img src="./images/blogman.jpg">
