Sem criatividade para a descrição

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -68,6 +68,13 @@ Licence URI: https://www.os-templates.com/template-terms
       <p><b>Visão:</b> Ser reconhecidos a nível regional e nacional pelo nosso trabalho de excelência na prestação de serviços e no desenvolvimento pessoal dos nossos membros.</p>
       <p><b>Valores:</b> Aprimoramento constante, ética, comprometimento, proatividade, profissionalismo e transparência.</p>      	  
     </div>
+    
+    <div class="content jusp">
+      <h3>Informações legais</h3>
+      <p><b>CNPJ:</b> 18.704.327/0001-00</p>
+      <p><b>Razão Social e Nome Fantasia:</b> PROTUT</p>
+      <p><b>Nautreza Jurídica:</b> 399-9 Associação Privada</p>
+    </div>
 
     <div class="clear"></div>
   </main>
