Escrita a página sobre o MEJ

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <!-- Seção de apresentação -->
 <div class="wrapper bgded">
-  <div class="bg-img bg-fallback" style="background-image: url('./images/backgrounds/painel_solar.jpg');"></div>
+  <div class="bg-img bg-fallback" style="background: #AAAAAA;"></div>
+  <div class="bg-img bg-fallback" style="background-image: url('./images/backgrounds/painel_solar.jpg');"></div>  
   <div id="main-slideshow" class="slideshow">
     <div class="bg-img" onerror="this.remove();" style="background-image: url('./images/backgrounds/braco_robo.webp');"></div>
     <div class="bg-img" onerror="this.remove();" style="background-image: url('./images/backgrounds/pcb.webp');"></div>
