--- a/servicos.html
+++ b/servicos.html
@@ -66,14 +66,14 @@ Licence URI: https://www.os-templates.com/template-terms
           </div>
         </div>
 
-        <div class="dropdown">
+        <div id="eficiencia-energetica" class="dropdown">
           <header>Análise de Eficiência Energética</header>
           <div>
             <p>A gente faz isso.</p>
           </div>
         </div>
 
-        <div class="dropdown">
+        <div id="spda" class="dropdown">
           <header>Projeto de SPDA</header>
           <div>
             <p>A gente faz isso.</p>
@@ -82,7 +82,7 @@ Licence URI: https://www.os-templates.com/template-terms
       </section>
       
       <br>
-      <h5>Automação</h5>
+      <h5 id="automacao-industrial">Automação</h5>
       <section class="dropdown-container">        
         <div class="dropdown">
           <header>Automação de Processos</header>
