Sistema de dropdown completamente concluído

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ Licence URI: https://www.os-templates.com/template-terms
       
       <div class="one_half jusp">
         <h3 class="center">O MEJ</h3>
-        <p>O Movimento Empresa Júnior (MEJ) surgiu na França em 1967. A principal missão das empresas juniores (EJs) é aproximar os estudantes de cursos superiores da vivência prática da sua profissão, desenvolvendo o empreendedorismo e preparando para os futuros desafios do mercado de trabalho.</p>
-        <p>A Protut está associada à Confederação Brasileira de Empresas Juniores - a Brasil Júnior. Também pertencemos, a nível estadual, à Federação Paranaense de Empresas Juniores (FEJEPAR), e, a nível regional, ao Núcleo Ponta Grossa de Empresas Juniores (NucPG).</p>
+        <p>O Movimento Empresa Júnior (MEJ) surgiu na França em 1967. A principal missão das empresas juniores (EJs) é aproximar os estudantes de cursos superiores da vivência prática da sua profissão, desenvolvendo o empreendedorismo e preparando-os para os futuros desafios do mercado de trabalho.</p>
+        <p>A Protut está associada à Confederação Brasileira de Empresas Juniores - a Brasil Júnior. Também pertencemos, a nível estadual, à Federação das Empresas Juniores do Estado do Paraná (FEJEPAR), e, a nível regional, ao Núcleo Ponta Grossa de Empresas Juniores (NucPG).</p>
         <footer class="center"><a href="./mej.html">Saiba mais &raquo;</a></footer>
       </div>
 
