--- a/servicos.html
+++ b/servicos.html
@@ -82,9 +82,9 @@ Licence URI: https://www.os-templates.com/template-terms
       </section>
       
       <br>
-      <h5 id="automacao-industrial">Automação</h5>
+      <h5>Automação</h5>
       <section class="dropdown-container">        
-        <div class="dropdown">
+        <div id="automacao-industrial" class="dropdown">
           <header>Automação de Processos</header>
           <div>
             <p>A gente faz isso.</p>
