--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <!-- Seção de apresentação -->
 <div class="wrapper bgded">
-  <div class="bg-img bg-fallback" style="background-image: linear-gradient(315deg, #F5D020 0%, #F53803 74%)"></div>
+  <div class="bg-img bg-fallback" style="background-image: linear-gradient(180deg, #86A7C6 0%, #6483A1 43%, #172F56 83%);"></div>
   <div class="bg-img bg-fallback" style="background-image: url('./images/backgrounds/painel_solar.jpg');"></div>  
   <div id="main-slideshow" class="slideshow">
     <div class="bg-img" onerror="this.remove();" style="background-image: url('./images/backgrounds/braco_robo.webp');"></div>
