Adicionado conteúdo à página de FAQ

--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -55,6 +55,7 @@ Licence URI: https://www.os-templates.com/template-terms
 	<div class="content jusp"> 
 	  <h3>O que é o Processo Seletivo da Protut?</h3>
 	  <p>O Processo Seletivo é a porta de entrada para novos membros na Protut. Se você tem interesse em participar da nossa empresa júnior, e está cursando <b>Engenharia Elétrica</b> ou <b>Tecnologia em Automação Industrial</b> na UTFPR campus Ponta Grossa, inscreva-se no nosso Processo Seletivo e venha fazer parte da equipe Protut!</p>
+	  <p><b>Importante:</b> os membros da Protut, assim como de qualquer outra empresa júnior, atuam de forma voluntária (não remunerada).</p>
 	</div>
 	
 	<div class="content jusp"> 
