Removidas referências ao blog

--- a/faq.html
+++ b/faq.html
@@ -98,7 +98,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <div class="dropdown">
           <header>Quando ocorrerá o próximo Processo Seletivo da Protut?</header>
           <div>
-            <p>Costumamos abrir Processos Seletivos no início de cada semestre letivo da UTFPR Ponta Grossa. Para saber mais sobre as datas específicas de nossos processos seletivos, confira nosso blog e nossas redes sociais. Para mais informações sobre o funcionamento do nosso Processo Seletivo, <a style="display:inline;" href="./processo-seletivo.html">clique aqui</a>.</p>
+            <p>Costumamos abrir Processos Seletivos no início de cada semestre letivo da UTFPR Ponta Grossa. Para saber mais sobre as datas específicas de nossos processos seletivos, confira <!-- nosso blog e -->nossas redes sociais. Para mais informações sobre o funcionamento do nosso Processo Seletivo, <a style="display:inline;" href="./processo-seletivo.html">clique aqui</a>.</p>
           </div>
         </div>
 
