--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="group">
       <div class="one_half first jusp">
         <h3>Fique por dentro das novidades</h3>
-        <p>Quer saber mais sobre as últimas notícias e tudo o que está acontecendo na Protut? Acesse já o nosso blog. Lá, você fica sabendo de tudo que acontece na Protut: Processos seletivos, histórias de sucesso, depoimentos de ex-membros, dicas e muito mais.</p>
-        <footer><a href="https://protutjr.blogspot.com">Acessar blog &raquo;</a></footer>
+        <p>Quer saber mais sobre as últimas notícias e tudo o que está acontecendo na Protut? Acesse já o nosso Instagram. Lá, você fica sabendo de tudo que acontece na Protut: Processos seletivos, histórias de sucesso, depoimentos de ex-membros, dicas e muito mais.</p>
+        <footer><a href="https://instagram.com/protutjr" target="__blank">Acessar Instagram &raquo;</a></footer>
       </div>
       <div class="one_half">
-        <img src="./images/blogman.jpg">
+        <img src="./images/protut_insta.png">
       </div>
     </div>
   </section>
