--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -86,7 +86,7 @@ Licence URI: https://www.os-templates.com/template-terms
 	  <ul>
 		<li><a href="https://instagram.com/protutjr" target="__blank">Instagram</a></li>
 		<li><a href="https://facebook.com/protutempresajunior" target="__blank">Facebook</a></li>
-		<li><a href="https://protutjr.blogspot.com" target="__blank">Blog da Protut</a></li>
+		<!--li><a href="https://protutjr.blogspot.com" target="__blank">Blog da Protut</a></li-->
 	  </ul>    
     </div>
     <div class="clear"></div>
