--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ Licence URI: https://www.os-templates.com/template-terms
       </li>          
       <li class="one_third hover-zoom">
         <article><i class="fa fa-gears"></i>
-          <h5>Automação Industrial &amp; Residencial</h5>
-          <p>Projetamos e implementamos sistemas de automação para sua empresa ou residência.</p>          
+          <h5>Automação Industrial</h5>
+          <p>Automatize processos na sua indústria, aumente a eficiência da produção, reduza custos e tenha maior segurança e confiabilidade.</p>
           <footer>
             <a href="./servicos.html#automacao-industrial">Saiba mais &raquo;</a>
           </footer>
@@ -91,10 +91,10 @@ Licence URI: https://www.os-templates.com/template-terms
       </li>
       <li class="one_third hover-zoom">
         <article><i class="fa fa-bolt"></i>
-          <h5>SPDA</h5>
-          <p>Elaboramos o projeto de Sistema de Proteção contra Descargas Atmosféricas (SPDA) para a sua instalação elétrica.</p>
+          <h5>Projeto Elétrico</h5>
+          <p>Vai construir ou reformar? Nós fazemos o projeto elétrico para você, garantindo uma instalação eficiente, econômica e segura.</p>
           <footer>
-            <a href="./servicos.html#spda">Saiba mais &raquo;</a>
+            <a href="./servicos.html#projeto-eletrico">Saiba mais &raquo;</a>
           </footer>
         </article>
       </li>
