--- a/servicos.html
+++ b/servicos.html
@@ -54,54 +54,47 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="content justify"> 
       <h3>Nossos Serviços</h3>
       <p>Oferecemos soluções inovadoras e personalizadas nas áreas de Engenharia Elétrica e Automação.</p>
-      <p>Confira nossa lista de serviços abaixo ou <a href="./uploads/portfolio.pdf" style="display: inline;" download>baixe nosso portfólio em PDF</a>.</p>
+      <p>Confira nossa lista de serviços abaixo ou <a href="./uploads/portfolio_old.pdf" style="display: inline;" download>baixe nosso portfólio em PDF</a>.</p>
       
       <br>
       <h5>Engenharia Elétrica</h5>
       <section class="dropdown-container">        
-        <div class="dropdown">
+        <div id="projeto-eletrico" class="dropdown">
           <header>Projetos Eléticos</header>
           <div>
-            <p>A gente faz isso.</p>
+            <p>O projeto elétrico é essencial para garantir a qualidade, a segurança e a economia em uma instalação elétrica. Um bom projeto elétrico é indispensável se você pretende construir ou reformar. Na Protut, realizamos todo o projeto da instalação elétrica para sua casa, comércio ou indústria.</p>
           </div>
         </div>
 
         <div id="eficiencia-energetica" class="dropdown">
           <header>Análise de Eficiência Energética</header>
           <div>
-            <p>A gente faz isso.</p>
-          </div>
-        </div>
-
-        <div id="spda" class="dropdown">
-          <header>Projeto de SPDA</header>
-          <div>
-            <p>A gente faz isso.</p>
+            <p>A conta de luz está muito cara? Sua empresa está procurando alternativas para economizar eletricidade? Na Protut, realizamos o diagnóstico da eficiência energética da sua instalação elétrica, encontramos possíveis problemas e oferecemos soluções para reduzir desperdícios e economizar dinheiro.</p>
           </div>
         </div>
       </section>
-      
+
       <br>
       <h5>Automação</h5>
       <section class="dropdown-container">        
         <div id="automacao-industrial" class="dropdown">
-          <header>Automação de Processos</header>
+          <header>Automação de Processos Industriais</header>
           <div>
-            <p>A gente faz isso.</p>
+            <p>A automação de processos industriais garante uma maior eficiência na produção, aumenta a segurança e a produtividade e proporciorna economia. Na Protut, realizamos uma avaliação de todo o seu processo e identificamos quais partes podem ser automatizadas. Também projetamos sistemas de automação e acompanhamos sua implementação no chão de fábrica.</p>
           </div>
         </div>
 
         <div class="dropdown">
           <header>Automação Residencial</header>
           <div>
-            <p>A gente faz isso.</p>
+            <p>Visando aumentar o conforto, a segurança e o bem-estar, a automação residencial está cada vez mais presente nos lares brasileiros. Se você está em busca de soluções em automação residencial (porteiro eletrônico, circuito de monitoramento por câmeras, etc.), entre em contato conosco. A Protut ajudará a desenvolver o roteiro de automação ideal para sua casa, do projeto à implementação.</p>
           </div>
         </div>
 
         <div class="dropdown">
           <header>Programação de CLPs e microcontroladores</header>
           <div>
-            <p>A gente faz isso.</p>
+            <p>Controladores Lógicos Programáveis (CLPs) são peças-chave em praticamente toda indústria que dispõe de processos automatizados. A Protut realiza a programação e configuração de CLPs para sua indústria. Também trabalhamos com a programação de microcontroladores (Arduino, ESP 8266, etc.) para aplicações de Internet das Coisas (IoT).</p>
           </div>
         </div>
       </section>
