Bug no ícone do WhatsApp (página de contato)

--- a/contato.html
+++ b/contato.html
@@ -70,7 +70,7 @@ Licence URI: https://www.os-templates.com/template-terms
     
     <div id="contact-info" class="sidebar one_quarter jusp">
 		  <h5>Dados de contato</h5>
-		  <h6><i class="fa fa-telegram"></i> WhatsApp (apenas mensagens):</h6>
+		  <h6><i class="fa fa-whatsapp"></i> WhatsApp (apenas mensagens):</h6>
 		  <a href="https://api.whatsapp.com/send?phone=5542999351244" target="__blank">(42) 9 9935-1244 (Andressa)</a>
 		  <a href="https://api.whatsapp.com/send?phone=5546999008220" target="__blank">(46) 9 9900-8220 (Eliabe)</a>
 		  
