Formulário de contato alternativo

--- a/contato.html
+++ b/contato.html
@@ -55,15 +55,11 @@ Licence URI: https://www.os-templates.com/template-terms
       <h3 class="center">Fale conosco</h3>      
 	  <p class="center">Envie-nos uma mensagem online. Responderemos o mais rápido possível.</p>
 	  <section id="contact-form" class="btmspace-30">
-		  <script data-b24-form="inline/8/s2nasp" data-skip-moving="true">
-			(function(w,d,u){
-			var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);
-			var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
-			})(window,document,'https://cdn.bitrix24.com.br/b20909251/crm/form/loader_8.js');
-		  </script>
-		  <div id="contact-form-loading">
+		  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdk0xxc6qV8wY75qFNlFeUU0Lf8afJCQyo8UgMKlU3MD4nJ7Q/viewform?embedded=true" style="width: 100%; min-height: 650px;" frameborder="0" marginheight="0" marginwidth="0">
+			<div id="contact-form-loading">
 			  <p><i class="fa fa-refresh fa-spin"></i> Aguarde um instante. Carregando formulário&hellip;</p>
 		  </div>
+		  </iframe>
 	  </section>
 	  <p>Confira também a nossa página de <a href="./faq.html" style="display:inline;">Perguntas Frequentes</a>.</p>
     </div>
