Site integrado ao Google Analytics

--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -15,24 +15,9 @@ Licence URI: https://www.os-templates.com/template-terms
 <head>
     <!-- Título desta página -->
     <title>Processo Seletivo - Protut Soluções em Energia</title>
-    <link rel="icon" href="./favicon.png" type="image/png">
-	<link rel="icon" href="./favicon.svg" type="image/svg+xml">
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <!-- CSS -->
-    <link href="./css/layout.css" rel="stylesheet" type="text/css" media="all">
-    <link href="./css/protut.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    
-    <!-- FONTES -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Overpass:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
-
-    <!-- JAVASCRIPT -->
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/jquery.backtotop.js" defer></script>
+	<!-- Tags compartilhadas do cabeçalho -->
+    {% include tags_comuns.html %}    
 </head>
 
 <body id="top">
